// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseComponent Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  baidu
</a>
`;

exports[`BaseComponent Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  baidu
</a>
`;

exports[`BaseComponent Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.baidu.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  baidu
</a>
`;
